WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
73943
UI process crashes if the Web Process crashes on launch
https://bugs.webkit.org/show_bug.cgi?id=73943
Summary
UI process crashes if the Web Process crashes on launch
Simon Fraser (smfr)
Reported
2011-12-06 11:55:40 PST
UI process crashes if the Web Process crashes on launch
Attachments
Patch
(1.58 KB, patch)
2011-12-06 11:57 PST
,
Simon Fraser (smfr)
sam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2011-12-06 11:57:00 PST
Created
attachment 118085
[details]
Patch
Simon Fraser (smfr)
Comment 2
2011-12-06 11:59:24 PST
http://trac.webkit.org/changeset/102160
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug