UI process crashes if the Web Process crashes on launch https://bugs.webkit.org/show_bug.cgi?id=73943

Reviewed by Sam Weinig.

When the Web Process crashes on launch, the WebConnectionToWebProcess
object was getting deleted inside of didClose. Add a protector to
prevent this.

* UIProcess/WebConnectionToWebProcess.cpp:
(WebKit::WebConnectionToWebProcess::didClose):

Canonical link: https://commits.webkit.org/90607@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@102160 268f45cc-cd09-0410-ab3c-d52691b4dbfc